2006-08-22  Bruno Haible  <bruno@clisp.org>

	* modules/pathmax.diff: Remove file.
	* modules/unlocked-io.diff: Remove file.
	* modules/exitfail.diff: Update.
	* modules/quote.diff: Update.
	* modules/quotearg.diff: Update.
	* m4/pathmax.m4.diff: Remove file.
	* m4/strdup.m4.diff: Remove file.
	* m4/unlocked-io.m4.diff: Remove file.
	* m4/exitfail.m4.diff: Update.
	* m4/hard-locale.m4.diff: Update.
	* m4/quote.m4.diff: Update.
	* m4/quotearg.m4.diff: Update.

2006-08-22  Bruno Haible  <bruno@clisp.org>

	* modules/gettext-tools-misc (Makefile.am): New variable
	lib_LTLIBRARIES.

2006-08-18  Bruno Haible  <bruno@clisp.org>

	* modules/bison-i18n: Remove file. Now taken from gnulib.
	* m4/bison-i18n.m4: Remove file. Now taken from gnulib.
	* Makefile.am (EXTRA_DIST): Remove them.

2006-08-16  Bruno Haible  <bruno@clisp.org>

	* modules/gettext-tools-misc (Files): Remove m4/restrict.m4, no longer
	in gnulib.

2006-07-31  Bruno Haible  <bruno@clisp.org>

	* lib/propername.c: Remove temporary hack.

2006-07-31  Bruno Haible  <bruno@clisp.org>

	* modules/gettext-runtime-misc: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2006-08-02  Bruno Haible  <bruno@clisp.org>

	* Makefile.am: New file.

2006-07-30  Bruno Haible  <bruno@clisp.org>

	* lib/argmatch.h.diff: New file.
	* lib/error.h.diff: New file.
	* lib/exitfail.h.diff: New file.
	* lib/fnmatch.c.diff: New file.
	* lib/fnmatch_loop.c.diff: New file.
	* lib/getopt_.h.diff: New file.
	* lib/javacomp.c.diff: New file.
	* lib/linebreak.c.diff: New file.
	* lib/obstack.h.diff: New file.
	* lib/progname.h.diff: New file.
	* lib/strerror.c.diff: New file.
	* m4/exitfail.m4.diff: New file.
	* m4/hard-locale.m4.diff: New file.
	* m4/pathmax.m4.diff: New file.
	* m4/quote.m4.diff: New file.
	* m4/quotearg.m4.diff: New file.
	* m4/strdup.m4.diff: New file.
	* m4/unlocked-io.m4.diff: New file.
	* m4/vasprintf.m4: New file.
	* modules/backupfile: New file.
	* modules/basename: New file.
	* modules/bison-i18n: New file.