@@ -1,3 +1,9 @@
+2006-08-28  Bruno Haible  <bruno@clisp.org>
+
+	* modules/c-strstr: Remove file, now in gnulib.
+	* lib/c-strstr.h: Remove file, now in gnulib.
+	* lib/c-strstr.c: Remove file, now in gnulib.
+
 2006-08-22  Bruno Haible  <bruno@clisp.org>
 
 	* modules/pathmax.diff: Remove file.
